Twig tag created

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    app.redis_provider:
+        class: Redis
+        factory: ['Symfony\Component\Cache\Adapter\RedisAdapter', 'createConnection']
+        arguments:
+            - 'redis://localhost'
+            - { retry_interval: 2, timeout: 10 }
